# python-neutronclient

./: .coveragerc  .gitignore  .gitreview  .pylintrc  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.rst  lower-constraints.txt  neutron_test.sh  openstack-common.conf  quantum_test.sh  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  version.py
debian/: changelog  control  rules
doc/: requirements.txt
doc/source/: conf.py  history.rst  index.rst
doc/source/cli/: index.rst  neutron-reference.rst  neutron.rst  osc_plugins.rst
doc/source/contributor/: cli_option_guideline.rst  client_command_extensions.rst  index.rst  transition_to_osc.rst
doc/source/devref/: cli_option_guideline.rst  client_command_extensions.rst  index.rst  transition_to_osc.rst
doc/source/reference/: index.rst
doc/source/usage/: cli.rst  library.rst  osc_cli_plugins.rst
neutronclient/: __init__.py  _i18n.py  client.py  cliff_sphinxext.py  i18n.py  shell.py  version.py
neutronclient/common/: __init__.py  auth_plugin.py  clientmanager.py  command.py  constants.py  exceptions.py  extension.py  serializer.py  utils.py  validators.py
neutronclient/neutron/: client.py
neutronclient/neutron/v2_0/: __init__.py  address_scope.py  agent.py  agentscheduler.py  auto_allocated_topology.py  availability_zone.py  credential.py  dns.py  extension.py  floatingip.py  grouppolicy.py  metering.py  netpartition.py  network.py  network_ip_availability.py  networkprofile.py  nvp_qos_queue.py  nvpnetworkgateway.py  policyprofile.py  port.py  purge.py  quota.py  rbac.py  router.py  securitygroup.py  servicetype.py  subnet.py  subnetpool.py  tag.py
neutronclient/openstack/common/: exception.py  gettextutils.py  importutils.py  jsonutils.py  strutils.py  timeutils.py
neutronclient/osc/: plugin.py  utils.py
neutronclient/osc/v2/: utils.py
neutronclient/tests/functional/: base.py  test_clientlib.py  test_readonly_neutron.py
neutronclient/tests/unit/: __init__.py  test_auth.py  test_auto_allocated_topology.py  test_casual_args.py  test_cli20.py  test_cli20_address_scope.py  test_cli20_agenschedulers.py  test_cli20_agents.py  test_cli20_agentschedulers.py  test_cli20_az.py  test_cli20_credential.py  test_cli20_extensions.py  test_cli20_floatingips.py  test_cli20_metering.py  test_cli20_network.py  test_cli20_network_ip_availability.py  test_cli20_networkprofile.py  test_cli20_nsx_networkgateway.py  test_cli20_nsx_queue.py  test_cli20_nuage_netpartition.py  test_cli20_nvp_queue.py  test_cli20_nvpnetworkgateway.py  test_cli20_packetfilter.py  test_cli20_policyprofile.py  test_cli20_port.py  test_cli20_purge.py  test_cli20_rbac.py  test_cli20_router.py  test_cli20_securitygroup.py  test_cli20_servicetype.py  test_cli20_subnet.py  test_cli20_subnetpool.py  test_cli20_tag.py  test_client_extension.py  test_command_meta.py  test_exceptions.py  test_http.py  test_name_or_id.py  test_quota.py  test_shell.py  (+3 more)
neutronclient/v2_0/: client.py
python-neutronclient/locale/: python-neutronclient.pot
quantum/client/: __init__.py  batch_config.py  cli.py  cli_lib.py
quantum/common/: config.py  exceptions.py  serializer.py  utils.py
quantumclient/: __init__.py  cli.py  cli_lib.py  client.py  shell.py  version.py
quantumclient/common/: __init__.py  clientmanager.py  command.py  constants.py  exceptions.py  serializer.py  utils.py
quantumclient/quantum/: client.py
quantumclient/v2_0/: client.py
releasenotes/notes/: Define-IpAddressAlreadyAllocatedClient-exception-e8600ca5ba1c7f45.yaml  add-aggressive-negotiation-mode-5218b1baff930eb8.yaml  add-auto-allocated-topology-delete-aaccd60bd0f2e7b2.yaml  add-get-me-a-network-5ab2d60bf6f257b1.yaml  add-l7-content-policies-capability-0f17cd06f044c83c.yaml  add-lb-status-tree-723f23c09617de3b.yaml  add-neutron-purge-a89e3d1179dce4b1.yaml  add-new-session-clear-option-3c0b78ebc133a10c.yaml  add-no-shared-option-to-qos-policy-update-56ac41fb3af7e309.yaml  add-osc-dynamic-routing-support-11130b2f440c0ac2.yaml  add-osc-trunk-commands-7e77283a369729c5.yaml  add-quota-default-show-c2ab35b791dcdcbc.yaml  add-rbac-qos-type-support-c42e31fadd7b.yaml  add-service-graph-ce4a25b3e32d70a6.yaml  add-sfc-commands.yaml  add-shared-pools-support-6f79b565afad3e47.yaml  add-subnet-onboard-e60772bc4984f698.yaml  add-support-to-floating-ip-port-forwardings-9dc838a5c5727eb7.yaml  add-tag-support-bad62d60ecc7075c.yaml  add-token-endpoint-auth-support-26bf7ee12e4ec833.yaml  availability-zone-support-8e66f55e46b7ef9a.yaml  bgp-dynamic-routing-b97a1c81d3007049.yaml  bug-1676922-81341b70bc6f055a.yaml  bulk-delete-support-94a353db08efec8d.yaml  default-subnetpool-support-c0d34870e9d3e814.yaml  deprecate-bgp-speaker-show-dragents-2fcce99cf6bb5b60.yaml  deprecate-cli-7be1123817969439.yaml  direct-physical-vnic-port-create-736d8b2600faf22b.yaml  docs-improvements-17e31babe38e2962.yaml  drop-nuage-commands-df10aab6ccd77ed2.yaml  drop-python-2.7-f615ebae463b2143.yaml  drop-xml-support-41babecb1784d996.yaml  dscp_qos-4a26d3c0363624b0.yaml  extraroute-atomic-b11919d8e33b0d92.yaml  fix-exception-typeerror-4.1.0-b37d738146575ed5.yaml  fix-quota-update-zero-args-d596c4169c2d2e30.yaml  fix-rbac-create-command-dd40a474f0f092db.yaml  fix-token-endpoint-auth-support-26bf7ee12e4ec833.yaml  global_request_id-56856a93b982a6b3.yaml  keystonev3-7f9ede9c21b30841.yaml  (+32 more)
releasenotes/source/: conf.py  index.rst  old_relnotes.rst
tests/unit/: __init__.py  test_auth.py  test_casual_args.py  test_cli20.py  test_cli20_agenschedulers.py  test_cli20_credential.py  test_cli20_extensions.py  test_cli20_floatingips.py  test_cli20_network.py  test_cli20_networkprofile.py  test_cli20_nvp_queue.py  test_cli20_nvpnetworkgateway.py  test_cli20_policyprofile.py  test_cli20_port.py  test_cli20_router.py  test_cli20_securitygroup.py  test_cli20_servicetype.py  test_cli20_subnet.py  test_http.py  test_name_or_id.py  test_quota.py  test_shell.py  test_ssl.py  test_utils.py
tools/: neutron.bash_completion  pip-requires  quantum.bash_completion  test-requires  tox_install.sh
(+226 files in other folders)
