[metadata]
name = python-neutronclient
summary = CLI and Client Library for OpenStack Networking
description_file =
    README.rst
author = OpenStack Networking Project
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/python-neutronclient/latest/
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    neutronclient

[entry_points]
console_scripts =
    neutron = neutronclient.shell:main

openstack.cli.extension =
    neutronclient = neutronclient.osc.plugin

openstack.neutronclient.v2 =
    sfc_flow_classifier_create = neutronclient.osc.v2.sfc.sfc_flow_classifier:CreateSfcFlowClassifier
    sfc_flow_classifier_delete = neutronclient.osc.v2.sfc.sfc_flow_classifier:DeleteSfcFlowClassifier
    sfc_flow_classifier_list = neutronclient.osc.v2.sfc.sfc_flow_classifier:ListSfcFlowClassifier
    sfc_flow_classifier_set = neutronclient.osc.v2.sfc.sfc_flow_classifier:SetSfcFlowClassifier
    sfc_flow_classifier_show = neutronclient.osc.v2.sfc.sfc_flow_classifier:ShowSfcFlowClassifier
    sfc_port_chain_create = neutronclient.osc.v2.sfc.sfc_port_chain:CreateSfcPortChain
    sfc_port_chain_delete = neutronclient.osc.v2.sfc.sfc_port_chain:DeleteSfcPortChain
    sfc_port_chain_list = neutronclient.osc.v2.sfc.sfc_port_chain:ListSfcPortChain
    sfc_port_chain_set = neutronclient.osc.v2.sfc.sfc_port_chain:SetSfcPortChain
    sfc_port_chain_show = neutronclient.osc.v2.sfc.sfc_port_chain:ShowSfcPortChain
    sfc_port_chain_unset = neutronclient.osc.v2.sfc.sfc_port_chain:UnsetSfcPortChain
    sfc_port_pair_create = neutronclient.osc.v2.sfc.sfc_port_pair:CreateSfcPortPair
    sfc_port_pair_delete = neutronclient.osc.v2.sfc.sfc_port_pair:DeleteSfcPortPair
    sfc_port_pair_list = neutronclient.osc.v2.sfc.sfc_port_pair:ListSfcPortPair
    sfc_port_pair_set = neutronclient.osc.v2.sfc.sfc_port_pair:SetSfcPortPair
    sfc_port_pair_show = neutronclient.osc.v2.sfc.sfc_port_pair:ShowSfcPortPair
    sfc_port_pair_group_create = neutronclient.osc.v2.sfc.sfc_port_pair_group:CreateSfcPortPairGroup
    sfc_port_pair_group_delete = neutronclient.osc.v2.sfc.sfc_port_pair_group:DeleteSfcPortPairGroup
    sfc_port_pair_group_list = neutronclient.osc.v2.sfc.sfc_port_pair_group:ListSfcPortPairGroup
    sfc_port_pair_group_set = neutronclient.osc.v2.sfc.sfc_port_pair_group:SetSfcPortPairGroup
    sfc_port_pair_group_show = neutronclient.osc.v2.sfc.sfc_port_pair_group:ShowSfcPortPairGroup
    sfc_port_pair_group_unset = neutronclient.osc.v2.sfc.sfc_port_pair_group:UnsetSfcPortPairGroup
    sfc_service_graph_create = neutronclient.osc.v2.sfc.sfc_service_graph:CreateSfcServiceGraph
    sfc_service_graph_delete = neutronclient.osc.v2.sfc.sfc_service_graph:DeleteSfcServiceGraph
    sfc_service_graph_set = neutronclient.osc.v2.sfc.sfc_service_graph:SetSfcServiceGraph
    sfc_service_graph_list = neutronclient.osc.v2.sfc.sfc_service_graph:ListSfcServiceGraph
    sfc_service_graph_show = neutronclient.osc.v2.sfc.sfc_service_graph:ShowSfcServiceGraph

    bgp_dragent_add_speaker = neutronclient.osc.v2.dynamic_routing.bgp_dragent:AddBgpSpeakerToDRAgent
    bgp_dragent_list = neutronclient.osc.v2.dynamic_routing.bgp_dragent:ListDRAgent
    bgp_dragent_remove_speaker = neutronclient.osc.v2.dynamic_routing.bgp_dragent:RemoveBgpSpeakerFromDRAgent
    bgp_peer_create = neutronclient.osc.v2.dynamic_routing.bgp_peer:CreateBgpPeer
    bgp_peer_delete = neutronclient.osc.v2.dynamic_routing.bgp_peer:DeleteBgpPeer
    bgp_peer_list = neutronclient.osc.v2.dynamic_routing.bgp_peer:ListBgpPeer
    bgp_peer_show = neutronclient.osc.v2.dynamic_routing.bgp_peer:ShowBgpPeer
    bgp_peer_set = neutronclient.osc.v2.dynamic_routing.bgp_peer:SetBgpPeer
    bgp_speaker_list_advertised_routes = neutronclient.osc.v2.dynamic_routing.bgp_speaker:ListRoutesAdvertisedBySpeaker
    bgp_speaker_create = neutronclient.osc.v2.dynamic_routing.bgp_speaker:CreateBgpSpeaker
    bgp_speaker_delete = neutronclient.osc.v2.dynamic_routing.bgp_speaker:DeleteBgpSpeaker
    bgp_speaker_list = neutronclient.osc.v2.dynamic_routing.bgp_speaker:ListBgpSpeaker
    bgp_speaker_add_network = neutronclient.osc.v2.dynamic_routing.bgp_speaker:AddNetworkToSpeaker
    bgp_speaker_remove_network = neutronclient.osc.v2.dynamic_routing.bgp_speaker:RemoveNetworkFromSpeaker
    bgp_speaker_add_peer = neutronclient.osc.v2.dynamic_routing.bgp_speaker:AddPeerToSpeaker
    bgp_speaker_remove_peer = neutronclient.osc.v2.dynamic_routing.bgp_speaker:RemovePeerFromSpeaker
    bgp_speaker_set = neutronclient.osc.v2.dynamic_routing.bgp_speaker:SetBgpSpeaker
    bgp_speaker_show = neutronclient.osc.v2.dynamic_routing.bgp_speaker:ShowBgpSpeaker
    bgp_speaker_show_dragents = neutronclient.osc.v2.dynamic_routing.bgp_dragent:ListDRAgentsHostingBgpSpeaker

    firewall_group_create = neutronclient.osc.v2.fwaas.firewallgroup:CreateFirewallGroup
    firewall_group_delete = neutronclient.osc.v2.fwaas.firewallgroup:DeleteFirewallGroup
    firewall_group_list = neutronclient.osc.v2.fwaas.firewallgroup:ListFirewallGroup
    firewall_group_set = neutronclient.osc.v2.fwaas.firewallgroup:SetFirewallGroup
    firewall_group_show = neutronclient.osc.v2.fwaas.firewallgroup:ShowFirewallGroup
    firewall_group_unset = neutronclient.osc.v2.fwaas.firewallgroup:UnsetFirewallGroup
    firewall_group_policy_create = neutronclient.osc.v2.fwaas.firewallpolicy:CreateFirewallPolicy
    firewall_group_policy_delete = neutronclient.osc.v2.fwaas.firewallpolicy:DeleteFirewallPolicy
    firewall_group_policy_add_rule = neutronclient.osc.v2.fwaas.firewallpolicy:FirewallPolicyInsertRule
    firewall_group_policy_list = neutronclient.osc.v2.fwaas.firewallpolicy:ListFirewallPolicy
    firewall_group_policy_remove_rule = neutronclient.osc.v2.fwaas.firewallpolicy:FirewallPolicyRemoveRule
    firewall_group_policy_set = neutronclient.osc.v2.fwaas.firewallpolicy:SetFirewallPolicy
    firewall_group_policy_show = neutronclient.osc.v2.fwaas.firewallpolicy:ShowFirewallPolicy
    firewall_group_policy_unset = neutronclient.osc.v2.fwaas.firewallpolicy:UnsetFirewallPolicy
    firewall_group_rule_create = neutronclient.osc.v2.fwaas.firewallrule:CreateFirewallRule
    firewall_group_rule_delete = neutronclient.osc.v2.fwaas.firewallrule:DeleteFirewallRule
    firewall_group_rule_list = neutronclient.osc.v2.fwaas.firewallrule:ListFirewallRule
    firewall_group_rule_set = neutronclient.osc.v2.fwaas.firewallrule:SetFirewallRule
    firewall_group_rule_show = neutronclient.osc.v2.fwaas.firewallrule:ShowFirewallRule
    firewall_group_rule_unset = neutronclient.osc.v2.fwaas.firewallrule:UnsetFirewallRule

    bgpvpn_create = neutronclient.osc.v2.networking_bgpvpn.bgpvpn:CreateBgpvpn
    bgpvpn_delete = neutronclient.osc.v2.networking_bgpvpn.bgpvpn:DeleteBgpvpn
    bgpvpn_list = neutronclient.osc.v2.networking_bgpvpn.bgpvpn:ListBgpvpn
    bgpvpn_set = neutronclient.osc.v2.networking_bgpvpn.bgpvpn:SetBgpvpn
    bgpvpn_show = neutronclient.osc.v2.networking_bgpvpn.bgpvpn:ShowBgpvpn
    bgpvpn_unset = neutronclient.osc.v2.networking_bgpvpn.bgpvpn:UnsetBgpvpn
    bgpvpn_network_association_create = neutronclient.osc.v2.networking_bgpvpn.network_association:CreateBgpvpnNetAssoc
    bgpvpn_network_association_delete = neutronclient.osc.v2.networking_bgpvpn.network_association:DeleteBgpvpnNetAssoc
    bgpvpn_network_association_list = neutronclient.osc.v2.networking_bgpvpn.network_association:ListBgpvpnNetAssoc
    bgpvpn_network_association_show = neutronclient.osc.v2.networking_bgpvpn.network_association:ShowBgpvpnNetAssoc
    bgpvpn_router_association_create = neutronclient.osc.v2.networking_bgpvpn.router_association:CreateBgpvpnRouterAssoc
    bgpvpn_router_association_delete = neutronclient.osc.v2.networking_bgpvpn.router_association:DeleteBgpvpnRouterAssoc
    bgpvpn_router_association_list = neutronclient.osc.v2.networking_bgpvpn.router_association:ListBgpvpnRouterAssoc
    bgpvpn_router_association_set = neutronclient.osc.v2.networking_bgpvpn.router_association:SetBgpvpnRouterAssoc
    bgpvpn_router_association_show = neutronclient.osc.v2.networking_bgpvpn.router_association:ShowBgpvpnRouterAssoc
    bgpvpn_router_association_unset = neutronclient.osc.v2.networking_bgpvpn.router_association:UnsetBgpvpnRouterAssoc
    bgpvpn_port_association_create = neutronclient.osc.v2.networking_bgpvpn.port_association:CreateBgpvpnPortAssoc
    bgpvpn_port_association_set = neutronclient.osc.v2.networking_bgpvpn.port_association:SetBgpvpnPortAssoc
    bgpvpn_port_association_unset = neutronclient.osc.v2.networking_bgpvpn.port_association:UnsetBgpvpnPortAssoc
    bgpvpn_port_association_delete = neutronclient.osc.v2.networking_bgpvpn.port_association:DeleteBgpvpnPortAssoc
    bgpvpn_port_association_list = neutronclient.osc.v2.networking_bgpvpn.port_association:ListBgpvpnPortAssoc
    bgpvpn_port_association_show = neutronclient.osc.v2.networking_bgpvpn.port_association:ShowBgpvpnPortAssoc

    network_loggable_resources_list = neutronclient.osc.v2.logging.network_log:ListLoggableResource
    network_log_create = neutronclient.osc.v2.logging.network_log:CreateNetworkLog
    network_log_delete = neutronclient.osc.v2.logging.network_log:DeleteNetworkLog
    network_log_list = neutronclient.osc.v2.logging.network_log:ListNetworkLog
    network_log_set = neutronclient.osc.v2.logging.network_log:SetNetworkLog
    network_log_show = neutronclient.osc.v2.logging.network_log:ShowNetworkLog

    vpn_endpoint_group_create = neutronclient.osc.v2.vpnaas.endpoint_group:CreateEndpointGroup
    vpn_endpoint_group_delete = neutronclient.osc.v2.vpnaas.endpoint_group:DeleteEndpointGroup
    vpn_endpoint_group_list = neutronclient.osc.v2.vpnaas.endpoint_group:ListEndpointGroup
    vpn_endpoint_group_set = neutronclient.osc.v2.vpnaas.endpoint_group:SetEndpointGroup
    vpn_endpoint_group_show = neutronclient.osc.v2.vpnaas.endpoint_group:ShowEndpointGroup

    vpn_ike_policy_create = neutronclient.osc.v2.vpnaas.ikepolicy:CreateIKEPolicy
    vpn_ike_policy_delete = neutronclient.osc.v2.vpnaas.ikepolicy:DeleteIKEPolicy
    vpn_ike_policy_list = neutronclient.osc.v2.vpnaas.ikepolicy:ListIKEPolicy
    vpn_ike_policy_set = neutronclient.osc.v2.vpnaas.ikepolicy:SetIKEPolicy
    vpn_ike_policy_show = neutronclient.osc.v2.vpnaas.ikepolicy:ShowIKEPolicy

    vpn_ipsec_policy_create = neutronclient.osc.v2.vpnaas.ipsecpolicy:CreateIPsecPolicy
    vpn_ipsec_policy_delete = neutronclient.osc.v2.vpnaas.ipsecpolicy:DeleteIPsecPolicy
    vpn_ipsec_policy_list = neutronclient.osc.v2.vpnaas.ipsecpolicy:ListIPsecPolicy
    vpn_ipsec_policy_set = neutronclient.osc.v2.vpnaas.ipsecpolicy:SetIPsecPolicy
    vpn_ipsec_policy_show = neutronclient.osc.v2.vpnaas.ipsecpolicy:ShowIPsecPolicy

    vpn_service_create = neutronclient.osc.v2.vpnaas.vpnservice:CreateVPNService
    vpn_service_delete = neutronclient.osc.v2.vpnaas.vpnservice:DeleteVPNService
    vpn_service_list = neutronclient.osc.v2.vpnaas.vpnservice:ListVPNService
    vpn_service_set = neutronclient.osc.v2.vpnaas.vpnservice:SetVPNSercice
    vpn_service_show = neutronclient.osc.v2.vpnaas.vpnservice:ShowVPNService

    vpn_ipsec_site_connection_create = neutronclient.osc.v2.vpnaas.ipsec_site_connection:CreateIPsecSiteConnection
    vpn_ipsec_site_connection_delete = neutronclient.osc.v2.vpnaas.ipsec_site_connection:DeleteIPsecSiteConnection
    vpn_ipsec_site_connection_list = neutronclient.osc.v2.vpnaas.ipsec_site_connection:ListIPsecSiteConnection
    vpn_ipsec_site_connection_set = neutronclient.osc.v2.vpnaas.ipsec_site_connection:SetIPsecSiteConnection
    vpn_ipsec_site_connection_show = neutronclient.osc.v2.vpnaas.ipsec_site_connection:ShowIPsecSiteConnection

    network_onboard_subnets = neutronclient.osc.v2.subnet_onboard.subnet_onboard:NetworkOnboardSubnets

neutron.cli.v2 =
    bash-completion = neutronclient.shell:BashCompletionCommand

    net-list = neutronclient.neutron.v2_0.network:ListNetwork
    net-external-list = neutronclient.neutron.v2_0.network:ListExternalNetwork
    net-show = neutronclient.neutron.v2_0.network:ShowNetwork
    net-create = neutronclient.neutron.v2_0.network:CreateNetwork
    net-delete = neutronclient.neutron.v2_0.network:DeleteNetwork
    net-update = neutronclient.neutron.v2_0.network:UpdateNetwork

    subnet-list = neutronclient.neutron.v2_0.subnet:ListSubnet
    subnet-show = neutronclient.neutron.v2_0.subnet:ShowSubnet
    subnet-create = neutronclient.neutron.v2_0.subnet:CreateSubnet
    subnet-delete = neutronclient.neutron.v2_0.subnet:DeleteSubnet
    subnet-update = neutronclient.neutron.v2_0.subnet:UpdateSubnet

    subnetpool-list = neutronclient.neutron.v2_0.subnetpool:ListSubnetPool
    subnetpool-show = neutronclient.neutron.v2_0.subnetpool:ShowSubnetPool
    subnetpool-create = neutronclient.neutron.v2_0.subnetpool:CreateSubnetPool
    subnetpool-delete = neutronclient.neutron.v2_0.subnetpool:DeleteSubnetPool
    subnetpool-update = neutronclient.neutron.v2_0.subnetpool:UpdateSubnetPool

    port-list = neutronclient.neutron.v2_0.port:ListPort
    port-show = neutronclient.neutron.v2_0.port:ShowPort
    port-create = neutronclient.neutron.v2_0.port:CreatePort
    port-delete = neutronclient.neutron.v2_0.port:DeletePort
    port-update = neutronclient.neutron.v2_0.port:UpdatePort

    purge = neutronclient.neutron.v2_0.purge:Purge

    quota-list = neutronclient.neutron.v2_0.quota:ListQuota
    quota-show = neutronclient.neutron.v2_0.quota:ShowQuota
    quota-default-show = neutronclient.neutron.v2_0.quota:ShowQuotaDefault
    quota-delete = neutronclient.neutron.v2_0.quota:DeleteQuota
    quota-update = neutronclient.neutron.v2_0.quota:UpdateQuota

    ext-list = neutronclient.neutron.v2_0.extension:ListExt
    ext-show = neutronclient.neutron.v2_0.extension:ShowExt

    router-list = neutronclient.neutron.v2_0.router:ListRouter
    router-port-list = neutronclient.neutron.v2_0.port:ListRouterPort
    router-show = neutronclient.neutron.v2_0.router:ShowRouter
    router-create = neutronclient.neutron.v2_0.router:CreateRouter
    router-delete = neutronclient.neutron.v2_0.router:DeleteRouter
    router-update = neutronclient.neutron.v2_0.router:UpdateRouter
    router-interface-add = neutronclient.neutron.v2_0.router:AddInterfaceRouter
    router-interface-delete = neutronclient.neutron.v2_0.router:RemoveInterfaceRouter
    router-gateway-set = neutronclient.neutron.v2_0.router:SetGatewayRouter
    router-gateway-clear = neutronclient.neutron.v2_0.router:RemoveGatewayRouter

    floatingip-list = neutronclient.neutron.v2_0.floatingip:ListFloatingIP
    floatingip-show = neutronclient.neutron.v2_0.floatingip:ShowFloatingIP
    floatingip-create = neutronclient.neutron.v2_0.floatingip:CreateFloatingIP
    floatingip-delete = neutronclient.neutron.v2_0.floatingip:DeleteFloatingIP
    floatingip-associate = neutronclient.neutron.v2_0.floatingip:AssociateFloatingIP
    floatingip-disassociate = neutronclient.neutron.v2_0.floatingip:DisassociateFloatingIP

    security-group-list = neutronclient.neutron.v2_0.securitygroup:ListSecurityGroup
    security-group-show = neutronclient.neutron.v2_0.securitygroup:ShowSecurityGroup
    security-group-create = neutronclient.neutron.v2_0.securitygroup:CreateSecurityGroup
    security-group-delete = neutronclient.neutron.v2_0.securitygroup:DeleteSecurityGroup
    security-group-update = neutronclient.neutron.v2_0.securitygroup:UpdateSecurityGroup
    security-group-rule-list = neutronclient.neutron.v2_0.securitygroup:ListSecurityGroupRule
    security-group-rule-show = neutronclient.neutron.v2_0.securitygroup:ShowSecurityGroupRule
    security-group-rule-create = neutronclient.neutron.v2_0.securitygroup:CreateSecurityGroupRule
    security-group-rule-delete = neutronclient.neutron.v2_0.securitygroup:DeleteSecurityGroupRule

    agent-list = neutronclient.neutron.v2_0.agent:ListAgent
    agent-show = neutronclient.neutron.v2_0.agent:ShowAgent
    agent-delete = neutronclient.neutron.v2_0.agent:DeleteAgent
    agent-update = neutronclient.neutron.v2_0.agent:UpdateAgent

    dhcp-agent-network-add = neutronclient.neutron.v2_0.agentscheduler:AddNetworkToDhcpAgent
    dhcp-agent-network-remove = neutronclient.neutron.v2_0.agentscheduler:RemoveNetworkFromDhcpAgent
    net-list-on-dhcp-agent = neutronclient.neutron.v2_0.agentscheduler:ListNetworksOnDhcpAgent
    dhcp-agent-list-hosting-net = neutronclient.neutron.v2_0.agentscheduler:ListDhcpAgentsHostingNetwork

    l3-agent-router-add = neutronclient.neutron.v2_0.agentscheduler:AddRouterToL3Agent
    l3-agent-router-remove = neutronclient.neutron.v2_0.agentscheduler:RemoveRouterFromL3Agent
    router-list-on-l3-agent = neutronclient.neutron.v2_0.agentscheduler:ListRoutersOnL3Agent
    l3-agent-list-hosting-router = neutronclient.neutron.v2_0.agentscheduler:ListL3AgentsHostingRouter

    lb-pool-list-on-agent = neutronclient.neutron.v2_0.agentscheduler:ListPoolsOnLbaasAgent
    lb-agent-hosting-pool = neutronclient.neutron.v2_0.agentscheduler:GetLbaasAgentHostingPool

    lbaas-loadbalancer-list-on-agent = neutronclient.neutron.v2_0.agentscheduler:ListLoadBalancersOnLbaasAgent
    lbaas-agent-hosting-loadbalancer = neutronclient.neutron.v2_0.agentscheduler:GetLbaasAgentHostingLoadBalancer

    service-provider-list = neutronclient.neutron.v2_0.servicetype:ListServiceProvider

    rbac-create = neutronclient.neutron.v2_0.rbac:CreateRBACPolicy
    rbac-update = neutronclient.neutron.v2_0.rbac:UpdateRBACPolicy
    rbac-list = neutronclient.neutron.v2_0.rbac:ListRBACPolicy
    rbac-show = neutronclient.neutron.v2_0.rbac:ShowRBACPolicy
    rbac-delete = neutronclient.neutron.v2_0.rbac:DeleteRBACPolicy

    address-scope-list = neutronclient.neutron.v2_0.address_scope:ListAddressScope
    address-scope-show = neutronclient.neutron.v2_0.address_scope:ShowAddressScope
    address-scope-create = neutronclient.neutron.v2_0.address_scope:CreateAddressScope
    address-scope-delete = neutronclient.neutron.v2_0.address_scope:DeleteAddressScope
    address-scope-update = neutronclient.neutron.v2_0.address_scope:UpdateAddressScope

    availability-zone-list = neutronclient.neutron.v2_0.availability_zone:ListAvailabilityZone

    auto-allocated-topology-show = neutronclient.neutron.v2_0.auto_allocated_topology:ShowAutoAllocatedTopology
    auto-allocated-topology-delete = neutronclient.neutron.v2_0.auto_allocated_topology:DeleteAutoAllocatedTopology

    net-ip-availability-list = neutronclient.neutron.v2_0.network_ip_availability:ListIpAvailability
    net-ip-availability-show = neutronclient.neutron.v2_0.network_ip_availability:ShowIpAvailability

    tag-add = neutronclient.neutron.v2_0.tag:AddTag
    tag-replace = neutronclient.neutron.v2_0.tag:ReplaceTag
    tag-remove = neutronclient.neutron.v2_0.tag:RemoveTag

    qos-policy-list = neutronclient.neutron.v2_0.qos.policy:ListQoSPolicy
    qos-policy-show = neutronclient.neutron.v2_0.qos.policy:ShowQoSPolicy
    qos-policy-create = neutronclient.neutron.v2_0.qos.policy:CreateQoSPolicy
    qos-policy-update = neutronclient.neutron.v2_0.qos.policy:UpdateQoSPolicy
    qos-policy-delete = neutronclient.neutron.v2_0.qos.policy:DeleteQoSPolicy
    qos-bandwidth-limit-rule-create = neutronclient.neutron.v2_0.qos.bandwidth_limit_rule:CreateQoSBandwidthLimitRule
    qos-bandwidth-limit-rule-show = neutronclient.neutron.v2_0.qos.bandwidth_limit_rule:ShowQoSBandwidthLimitRule
    qos-bandwidth-limit-rule-list = neutronclient.neutron.v2_0.qos.bandwidth_limit_rule:ListQoSBandwidthLimitRules
    qos-bandwidth-limit-rule-update = neutronclient.neutron.v2_0.qos.bandwidth_limit_rule:UpdateQoSBandwidthLimitRule
    qos-bandwidth-limit-rule-delete = neutronclient.neutron.v2_0.qos.bandwidth_limit_rule:DeleteQoSBandwidthLimitRule
    qos-dscp-marking-rule-create = neutronclient.neutron.v2_0.qos.dscp_marking_rule:CreateQoSDscpMarkingRule
    qos-dscp-marking-rule-show = neutronclient.neutron.v2_0.qos.dscp_marking_rule:ShowQoSDscpMarkingRule
    qos-dscp-marking-rule-list = neutronclient.neutron.v2_0.qos.dscp_marking_rule:ListQoSDscpMarkingRules
    qos-dscp-marking-rule-update = neutronclient.neutron.v2_0.qos.dscp_marking_rule:UpdateQoSDscpMarkingRule
    qos-dscp-marking-rule-delete = neutronclient.neutron.v2_0.qos.dscp_marking_rule:DeleteQoSDscpMarkingRule
    qos-minimum-bandwidth-rule-create = neutronclient.neutron.v2_0.qos.minimum_bandwidth_rule:CreateQoSMinimumBandwidthRule
    qos-minimum-bandwidth-rule-show = neutronclient.neutron.v2_0.qos.minimum_bandwidth_rule:ShowQoSMinimumBandwidthRule
    qos-minimum-bandwidth-rule-list = neutronclient.neutron.v2_0.qos.minimum_bandwidth_rule:ListQoSMinimumBandwidthRules
    qos-minimum-bandwidth-rule-update = neutronclient.neutron.v2_0.qos.minimum_bandwidth_rule:UpdateQoSMinimumBandwidthRule
    qos-minimum-bandwidth-rule-delete = neutronclient.neutron.v2_0.qos.minimum_bandwidth_rule:DeleteQoSMinimumBandwidthRule
    qos-available-rule-types = neutronclient.neutron.v2_0.qos.rule:ListQoSRuleTypes

    flavor-list = neutronclient.neutron.v2_0.flavor.flavor:ListFlavor
    flavor-show = neutronclient.neutron.v2_0.flavor.flavor:ShowFlavor
    flavor-create = neutronclient.neutron.v2_0.flavor.flavor:CreateFlavor
    flavor-delete = neutronclient.neutron.v2_0.flavor.flavor:DeleteFlavor
    flavor-update = neutronclient.neutron.v2_0.flavor.flavor:UpdateFlavor
    flavor-associate = neutronclient.neutron.v2_0.flavor.flavor:AssociateFlavor
    flavor-disassociate = neutronclient.neutron.v2_0.flavor.flavor:DisassociateFlavor
    flavor-profile-list = neutronclient.neutron.v2_0.flavor.flavor_profile:ListFlavorProfile
    flavor-profile-show = neutronclient.neutron.v2_0.flavor.flavor_profile:ShowFlavorProfile
    flavor-profile-create = neutronclient.neutron.v2_0.flavor.flavor_profile:CreateFlavorProfile
    flavor-profile-delete = neutronclient.neutron.v2_0.flavor.flavor_profile:DeleteFlavorProfile
    flavor-profile-update = neutronclient.neutron.v2_0.flavor.flavor_profile:UpdateFlavorProfile

    meter-label-create = neutronclient.neutron.v2_0.metering:CreateMeteringLabel
    meter-label-list = neutronclient.neutron.v2_0.metering:ListMeteringLabel
    meter-label-show = neutronclient.neutron.v2_0.metering:ShowMeteringLabel
    meter-label-delete = neutronclient.neutron.v2_0.metering:DeleteMeteringLabel
    meter-label-rule-create = neutronclient.neutron.v2_0.metering:CreateMeteringLabelRule
    meter-label-rule-list = neutronclient.neutron.v2_0.metering:ListMeteringLabelRule
    meter-label-rule-show = neutronclient.neutron.v2_0.metering:ShowMeteringLabelRule
    meter-label-rule-delete = neutronclient.neutron.v2_0.metering:DeleteMeteringLabelRule

    firewall-rule-list = neutronclient.neutron.v2_0.fw.firewallrule:ListFirewallRule
    firewall-rule-show = neutronclient.neutron.v2_0.fw.firewallrule:ShowFirewallRule
    firewall-rule-create = neutronclient.neutron.v2_0.fw.firewallrule:CreateFirewallRule
    firewall-rule-update = neutronclient.neutron.v2_0.fw.firewallrule:UpdateFirewallRule
    firewall-rule-delete = neutronclient.neutron.v2_0.fw.firewallrule:DeleteFirewallRule
    firewall-policy-list = neutronclient.neutron.v2_0.fw.firewallpolicy:ListFirewallPolicy
    firewall-policy-show = neutronclient.neutron.v2_0.fw.firewallpolicy:ShowFirewallPolicy
    firewall-policy-create = neutronclient.neutron.v2_0.fw.firewallpolicy:CreateFirewallPolicy
    firewall-policy-update = neutronclient.neutron.v2_0.fw.firewallpolicy:UpdateFirewallPolicy
    firewall-policy-delete = neutronclient.neutron.v2_0.fw.firewallpolicy:DeleteFirewallPolicy
    firewall-policy-insert-rule = neutronclient.neutron.v2_0.fw.firewallpolicy:FirewallPolicyInsertRule
    firewall-policy-remove-rule = neutronclient.neutron.v2_0.fw.firewallpolicy:FirewallPolicyRemoveRule
    firewall-list = neutronclient.neutron.v2_0.fw.firewall:ListFirewall
    firewall-show = neutronclient.neutron.v2_0.fw.firewall:ShowFirewall
    firewall-create = neutronclient.neutron.v2_0.fw.firewall:CreateFirewall
    firewall-update = neutronclient.neutron.v2_0.fw.firewall:UpdateFirewall
    firewall-delete = neutronclient.neutron.v2_0.fw.firewall:DeleteFirewall

    bgp-dragent-speaker-add = neutronclient.neutron.v2_0.bgp.dragentscheduler:AddBGPSpeakerToDRAgent
    bgp-dragent-speaker-remove = neutronclient.neutron.v2_0.bgp.dragentscheduler:RemoveBGPSpeakerFromDRAgent
    bgp-speaker-list-on-dragent = neutronclient.neutron.v2_0.bgp.dragentscheduler:ListBGPSpeakersOnDRAgent
    bgp-dragent-list-hosting-speaker = neutronclient.neutron.v2_0.bgp.dragentscheduler:ListDRAgentsHostingBGPSpeaker
    bgp-speaker-list = neutronclient.neutron.v2_0.bgp.speaker:ListSpeakers
    bgp-speaker-advertiseroute-list = neutronclient.neutron.v2_0.bgp.speaker:ListRoutesAdvertisedBySpeaker
    bgp-speaker-show = neutronclient.neutron.v2_0.bgp.speaker:ShowSpeaker
    bgp-speaker-create = neutronclient.neutron.v2_0.bgp.speaker:CreateSpeaker
    bgp-speaker-update = neutronclient.neutron.v2_0.bgp.speaker:UpdateSpeaker
    bgp-speaker-delete = neutronclient.neutron.v2_0.bgp.speaker:DeleteSpeaker
    bgp-speaker-peer-add = neutronclient.neutron.v2_0.bgp.speaker:AddPeerToSpeaker
    bgp-speaker-peer-remove = neutronclient.neutron.v2_0.bgp.speaker:RemovePeerFromSpeaker
    bgp-speaker-network-add = neutronclient.neutron.v2_0.bgp.speaker:AddNetworkToSpeaker
    bgp-speaker-network-remove = neutronclient.neutron.v2_0.bgp.speaker:RemoveNetworkFromSpeaker
    bgp-peer-list = neutronclient.neutron.v2_0.bgp.peer:ListPeers
    bgp-peer-show = neutronclient.neutron.v2_0.bgp.peer:ShowPeer
    bgp-peer-create = neutronclient.neutron.v2_0.bgp.peer:CreatePeer
    bgp-peer-update = neutronclient.neutron.v2_0.bgp.peer:UpdatePeer
    bgp-peer-delete = neutronclient.neutron.v2_0.bgp.peer:DeletePeer

    lbaas-loadbalancer-list = neutronclient.neutron.v2_0.lb.v2.loadbalancer:ListLoadBalancer
    lbaas-loadbalancer-show = neutronclient.neutron.v2_0.lb.v2.loadbalancer:ShowLoadBalancer
    lbaas-loadbalancer-create = neutronclient.neutron.v2_0.lb.v2.loadbalancer:CreateLoadBalancer
    lbaas-loadbalancer-update = neutronclient.neutron.v2_0.lb.v2.loadbalancer:UpdateLoadBalancer
    lbaas-loadbalancer-delete = neutronclient.neutron.v2_0.lb.v2.loadbalancer:DeleteLoadBalancer
    lbaas-loadbalancer-stats = neutronclient.neutron.v2_0.lb.v2.loadbalancer:RetrieveLoadBalancerStats
    lbaas-loadbalancer-status = neutronclient.neutron.v2_0.lb.v2.loadbalancer:RetrieveLoadBalancerStatus
    lbaas-listener-list = neutronclient.neutron.v2_0.lb.v2.listener:ListListener
    lbaas-listener-show = neutronclient.neutron.v2_0.lb.v2.listener:ShowListener
    lbaas-listener-create = neutronclient.neutron.v2_0.lb.v2.listener:CreateListener
    lbaas-listener-update = neutronclient.neutron.v2_0.lb.v2.listener:UpdateListener
    lbaas-listener-delete = neutronclient.neutron.v2_0.lb.v2.listener:DeleteListener
    lbaas-l7policy-list = neutronclient.neutron.v2_0.lb.v2.l7policy:ListL7Policy
    lbaas-l7policy-show = neutronclient.neutron.v2_0.lb.v2.l7policy:ShowL7Policy
    lbaas-l7policy-create = neutronclient.neutron.v2_0.lb.v2.l7policy:CreateL7Policy
    lbaas-l7policy-update = neutronclient.neutron.v2_0.lb.v2.l7policy:UpdateL7Policy
    lbaas-l7policy-delete = neutronclient.neutron.v2_0.lb.v2.l7policy:DeleteL7Policy
    lbaas-l7rule-list = neutronclient.neutron.v2_0.lb.v2.l7rule:ListL7Rule
    lbaas-l7rule-show = neutronclient.neutron.v2_0.lb.v2.l7rule:ShowL7Rule
    lbaas-l7rule-create = neutronclient.neutron.v2_0.lb.v2.l7rule:CreateL7Rule
    lbaas-l7rule-update = neutronclient.neutron.v2_0.lb.v2.l7rule:UpdateL7Rule
    lbaas-l7rule-delete = neutronclient.neutron.v2_0.lb.v2.l7rule:DeleteL7Rule
    lbaas-pool-list = neutronclient.neutron.v2_0.lb.v2.pool:ListPool
    lbaas-pool-show = neutronclient.neutron.v2_0.lb.v2.pool:ShowPool
    lbaas-pool-create = neutronclient.neutron.v2_0.lb.v2.pool:CreatePool
    lbaas-pool-update = neutronclient.neutron.v2_0.lb.v2.pool:UpdatePool
    lbaas-pool-delete = neutronclient.neutron.v2_0.lb.v2.pool:DeletePool
    lbaas-healthmonitor-list = neutronclient.neutron.v2_0.lb.v2.healthmonitor:ListHealthMonitor
    lbaas-healthmonitor-show = neutronclient.neutron.v2_0.lb.v2.healthmonitor:ShowHealthMonitor
    lbaas-healthmonitor-create = neutronclient.neutron.v2_0.lb.v2.healthmonitor:CreateHealthMonitor
    lbaas-healthmonitor-update = neutronclient.neutron.v2_0.lb.v2.healthmonitor:UpdateHealthMonitor
    lbaas-healthmonitor-delete = neutronclient.neutron.v2_0.lb.v2.healthmonitor:DeleteHealthMonitor
    lbaas-member-list = neutronclient.neutron.v2_0.lb.v2.member:ListMember
    lbaas-member-show = neutronclient.neutron.v2_0.lb.v2.member:ShowMember
    lbaas-member-create = neutronclient.neutron.v2_0.lb.v2.member:CreateMember
    lbaas-member-update = neutronclient.neutron.v2_0.lb.v2.member:UpdateMember
    lbaas-member-delete = neutronclient.neutron.v2_0.lb.v2.member:DeleteMember

    lb-vip-list = neutronclient.neutron.v2_0.lb.vip:ListVip
    lb-vip-show = neutronclient.neutron.v2_0.lb.vip:ShowVip
    lb-vip-create = neutronclient.neutron.v2_0.lb.vip:CreateVip
    lb-vip-update = neutronclient.neutron.v2_0.lb.vip:UpdateVip
    lb-vip-delete = neutronclient.neutron.v2_0.lb.vip:DeleteVip
    lb-pool-list = neutronclient.neutron.v2_0.lb.pool:ListPool
    lb-pool-show = neutronclient.neutron.v2_0.lb.pool:ShowPool
    lb-pool-create = neutronclient.neutron.v2_0.lb.pool:CreatePool
    lb-pool-update = neutronclient.neutron.v2_0.lb.pool:UpdatePool
    lb-pool-delete = neutronclient.neutron.v2_0.lb.pool:DeletePool
    lb-pool-stats = neutronclient.neutron.v2_0.lb.pool:RetrievePoolStats
    lb-member-list = neutronclient.neutron.v2_0.lb.member:ListMember
    lb-member-show = neutronclient.neutron.v2_0.lb.member:ShowMember
    lb-member-create = neutronclient.neutron.v2_0.lb.member:CreateMember
    lb-member-update = neutronclient.neutron.v2_0.lb.member:UpdateMember
    lb-member-delete = neutronclient.neutron.v2_0.lb.member:DeleteMember
    lb-healthmonitor-list = neutronclient.neutron.v2_0.lb.healthmonitor:ListHealthMonitor
    lb-healthmonitor-show = neutronclient.neutron.v2_0.lb.healthmonitor:ShowHealthMonitor
    lb-healthmonitor-create = neutronclient.neutron.v2_0.lb.healthmonitor:CreateHealthMonitor
    lb-healthmonitor-update = neutronclient.neutron.v2_0.lb.healthmonitor:UpdateHealthMonitor
    lb-healthmonitor-delete = neutronclient.neutron.v2_0.lb.healthmonitor:DeleteHealthMonitor
    lb-healthmonitor-associate = neutronclient.neutron.v2_0.lb.healthmonitor:AssociateHealthMonitor
    lb-healthmonitor-disassociate = neutronclient.neutron.v2_0.lb.healthmonitor:DisassociateHealthMonitor

    ipsec-site-connection-list = neutronclient.neutron.v2_0.vpn.ipsec_site_connection:ListIPsecSiteConnection
    ipsec-site-connection-show = neutronclient.neutron.v2_0.vpn.ipsec_site_connection:ShowIPsecSiteConnection
    ipsec-site-connection-create = neutronclient.neutron.v2_0.vpn.ipsec_site_connection:CreateIPsecSiteConnection
    ipsec-site-connection-update = neutronclient.neutron.v2_0.vpn.ipsec_site_connection:UpdateIPsecSiteConnection
    ipsec-site-connection-delete = neutronclient.neutron.v2_0.vpn.ipsec_site_connection:DeleteIPsecSiteConnection
    vpn-endpoint-group-list = neutronclient.neutron.v2_0.vpn.endpoint_group:ListEndpointGroup
    vpn-endpoint-group-show = neutronclient.neutron.v2_0.vpn.endpoint_group:ShowEndpointGroup
    vpn-endpoint-group-create = neutronclient.neutron.v2_0.vpn.endpoint_group:CreateEndpointGroup
    vpn-endpoint-group-update = neutronclient.neutron.v2_0.vpn.endpoint_group:UpdateEndpointGroup
    vpn-endpoint-group-delete = neutronclient.neutron.v2_0.vpn.endpoint_group:DeleteEndpointGroup
    vpn-service-list = neutronclient.neutron.v2_0.vpn.vpnservice:ListVPNService
    vpn-service-show = neutronclient.neutron.v2_0.vpn.vpnservice:ShowVPNService
    vpn-service-create = neutronclient.neutron.v2_0.vpn.vpnservice:CreateVPNService
    vpn-service-update = neutronclient.neutron.v2_0.vpn.vpnservice:UpdateVPNService
    vpn-service-delete = neutronclient.neutron.v2_0.vpn.vpnservice:DeleteVPNService
    vpn-ipsecpolicy-list = neutronclient.neutron.v2_0.vpn.ipsecpolicy:ListIPsecPolicy
    vpn-ipsecpolicy-show = neutronclient.neutron.v2_0.vpn.ipsecpolicy:ShowIPsecPolicy
    vpn-ipsecpolicy-create = neutronclient.neutron.v2_0.vpn.ipsecpolicy:CreateIPsecPolicy
    vpn-ipsecpolicy-update = neutronclient.neutron.v2_0.vpn.ipsecpolicy:UpdateIPsecPolicy
    vpn-ipsecpolicy-delete = neutronclient.neutron.v2_0.vpn.ipsecpolicy:DeleteIPsecPolicy
    vpn-ikepolicy-list = neutronclient.neutron.v2_0.vpn.ikepolicy:ListIKEPolicy
    vpn-ikepolicy-show = neutronclient.neutron.v2_0.vpn.ikepolicy:ShowIKEPolicy
    vpn-ikepolicy-create = neutronclient.neutron.v2_0.vpn.ikepolicy:CreateIKEPolicy
    vpn-ikepolicy-update = neutronclient.neutron.v2_0.vpn.ikepolicy:UpdateIKEPolicy
    vpn-ikepolicy-delete = neutronclient.neutron.v2_0.vpn.ikepolicy:DeleteIKEPolicy
